--- a/forecastingApplication/src/app/home-page/home-page/home-page.component.html
+++ b/forecastingApplication/src/app/home-page/home-page/home-page.component.html
@@ -1,1 +1,5 @@
-<p>home-page works!</p>
+<header>
+    <h5>NAGARRO FORECASTING PROTOTYPE</h5>
+</header>
+<p>home-page works!</p> 
+<button class="btn btn-danger">Dead</button>
