--- a/forecastingApplication/src/app/home-page/home-page/home-page.component.html
+++ b/forecastingApplication/src/app/home-page/home-page/home-page.component.html
@@ -1,5 +1,44 @@
 <header>
-    <h5>NAGARRO FORECASTING PROTOTYPE</h5>
+    <h5>Nagarro Forecasting Prototype</h5>
 </header>
-<p>home-page works!</p> 
-<button class="btn btn-danger">Dead</button>
+<br>
+<div id="outerBox">
+    <button class="btn btn-success" id="addBt" (click)="add()">Add Label</button>
+    <form [formGroup]="worksheetForm" (ngSubmit)="createWorksheet()">
+        <input type="submit" class="btn btn-success" id="createBt" value="Create Sheet">
+        <!-- <button class="btn btn-success">Sync Changes</button> -->
+
+        <!-- time series dropdown -->
+        <div id="timeSeriesDiv">
+            <label for="timeOptionsId" id="timeSeriesLabel">Time Series</label>
+            <!-- <select id="timeOptionsId"> formControlName="timeOptions" (change)="onSelected($event)" required> -->
+            <select id="timeOptionsId" formControlName="timeSeriesType" (change)="onSelected($event)" required>
+                <option value="">Choose Time Series</option>
+                <option value="1">Year</option>
+                <option value="2">Quarter</option>
+                <option value="3">Month</option>
+                <option value="4">Week</option>
+                <option value="5">Day</option>
+            </select>
+        </div>
+
+        <!-- rating input boxes -->
+        <div id="rangeDiv">
+            <label id="rangeLabel">Range</label>
+            <input type="text" id="startRangeId">-<input type="text" id="endRangeId">
+        </div>
+        <hr>
+        <table id="levelInputTable">
+            <tr>
+                <th>Level No.</th>
+                <th>Name</th>
+                <th>Possible Values (Count)</th>
+            </tr>
+            <tr *ngFor="let item of collection, let i=index">
+                <td>{{i+1}}</td>
+                <td><input type="text" class="levelNameInput"></td>
+                <td><input type="text" class="levelNameValues"></td>
+            </tr>
+        </table>
+    </form>
+</div>
