--- a/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.html
+++ b/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.html
@@ -1,1 +1,28 @@
-<p>forecast-display works!</p>
+<header>
+    <h5>Nagarro Forecasting Prototype</h5>
+  </header>
+  
+  <div class=" container mt-4">
+    <h4 class="text-centre">Forecast Worksheet</h4>
+      <table>
+        <thead>
+          <tr>
+            <th>{{ jsonData.levels.level1 }}</th>
+            <th>{{ jsonData.levels.level2 }}</th>
+            <th>{{ jsonData.levels.level3 }}</th>
+            <th *ngFor="let year of years" >{{ year }}</th>
+          </tr>
+        </thead>
+        <!-- <tbody>
+          <tr *ngFor="let item of jsonData.data">
+            <td>{{ item.level1 }}</td>
+            <td *ngFor="let gender of ['male', 'female']">
+              <td *ngFor="let ageGroup of ['20-40', '40-60', '60-80']">
+                <td *ngFor="let year of getYearRange()">{{ item[gender][ageGroup][year] }}</td>
+              </td>
+            </td>
+          </tr>
+        </tbody> -->
+      </table>
+    </div>
+    
