first page done, for loop resolved

--- a/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.html
+++ b/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.html
@@ -1,19 +1,26 @@
 <header>
-    <h5>Nagarro Forecasting Prototype</h5>
-  </header>
-  
-  <div class=" container mt-4">
-    <h4 class="text-centre">Forecast Worksheet</h4>
-      <table>
-        <thead>
-          <tr>
-            <th>{{ jsonData.levels.level1 }}</th>
-            <th>{{ jsonData.levels.level2 }}</th>
-            <th>{{ jsonData.levels.level3 }}</th>
-            <th *ngFor="let year of years" >{{ year }}</th>
-          </tr>
-        </thead>
-        <!-- <tbody>
+  <h5>Nagarro Forecasting Prototype</h5>
+</header>
+
+<div class=" container mt-4">
+  <h4 class="text-centre">Forecast Worksheet</h4>
+  <table>
+    <thead>
+      <tr>
+        <th>{{ jsonData.levels.level1 }}</th>
+        <th>{{ jsonData.levels.level2 }}</th>
+        <th>{{ jsonData.levels.level3 }}</th>
+        <th *ngFor="let year of years">{{ year }}</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let yr of years">
+        <td>{{yr}}First</td>
+        <td>{{yr}}First2nd</td>
+        <td>{{yr}}First3rd</td>
+      </tr>
+    </tbody>
+    <!-- <tbody>
           <tr *ngFor="let item of jsonData.data">
             <td>{{ item.level1 }}</td>
             <td *ngFor="let gender of ['male', 'female']">
@@ -23,6 +30,5 @@
             </td>
           </tr>
         </tbody> -->
-      </table>
-    </div>
-    
+  </table>
+</div>
