styling and positioning improved of page1

--- a/forecastingApplication/src/app/home-page/home-page/home-page.component.css
+++ b/forecastingApplication/src/app/home-page/home-page/home-page.component.css
@@ -18,6 +18,27 @@ header{
     margin: 5px;
 }
 
+#levelNoId, #levelNameId, #levelValueId{
+    border: none;
+    outline: none;
+    border-bottom: 1px solid black;
+}
+
+#levelNoLabel{
+    margin-left: 5px;
+    margin-right: 10px;
+}
+
+#levelNameLabel{
+    margin-left: 5px;
+    margin-right: 32px;
+}
+
+#levelValueLabel{
+    margin-left: 5px;
+    margin-right: 29px;
+}
+
 table, tr{
     border: 2px solid rgb(21, 118, 4);
     padding: 5px;
