--- a/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.html
+++ b/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.html
@@ -4,6 +4,7 @@
 
 <div class=" container mt-4">
   <h4 class="text-centre">Forecast Worksheet</h4>
+  <label>Sheet Name: {{worksheetParametersTransferService.sheetName}}</label><br>
   <button class="btn btn-success" title="Save Worksheet">Save</button>
   <button class="btn btn-primary" title="Fetch saved Worksheets" onclick="loadWorksheet()">Fetch</button>
   <table>
@@ -21,7 +22,7 @@
         </th>
       </tr>
     </thead>
-    <tbody *ngIfElse="isOldWorksheet;newWorksheet">
+    <tbody *ngIfElse="isOldWorksheet; newWorksheet">
       <!-- old worksheet making tble from json recieved -->
 
       <!-- <tr *ngFor="let item of jsonData.data">
