--- a/forecastingApplication/src/app/home-page/home-page/home-page.component.html
+++ b/forecastingApplication/src/app/home-page/home-page/home-page.component.html
@@ -1,5 +1,5 @@
-<header>
-    <h5>Nagarro Forecasting Prototype</h5>
+<header class="bg-success">
+    <h5 class="text-light">Nagarro Forecasting Prototype</h5>
 </header>
 <br>
 <div id="outerBox">
