--- a/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.css
+++ b/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.css
@@ -14,6 +14,6 @@ table {
   }
   
   header{
-    background-color: rgb(146, 255, 127);
+    /* background-color: rgb(146, 255, 127); */
     padding: 5px 10px;
 }
