--- a/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.html
+++ b/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.html
@@ -6,10 +6,11 @@
   <h4 class="text-center">Forecast Worksheet</h4>
   <div class="my-3">
     <button class="btn btn-success" title="Save Worksheet">Save</button>
-    <button class="btn btn-primary mx-3" title="Fetch saved Worksheets" (click)="loadWorksheet()">Fetch</button>
+    <button class="btn btn-primary mx-3" title="Fetch saved Worksheets">Fetch</button>
     <button class="btn btn-secondary" routerLink="" title="Back">Back</button>
   </div>
   <table>
+    <!-- Table Header -->
     <thead>
       <tr>
         <th *ngFor="let name of levelNamesArr">
@@ -20,12 +21,15 @@
         </th>
       </tr>
     </thead>
-    <!-- Generating Table -->
+    <!--Table Data -->
     <tbody>
-      <tr *ngFor="let item of outputObjectJson.sheet">
+      <tr *ngFor="let item of jsonDataLevels.sheet">
         <td>{{ item.country }}</td>
         <td>{{ item.gender }}</td>
         <td>{{ item.age }}</td>
+        <!-- <td *ngFor="let level of levelNamesArr">
+          {{item[level]}}
+        </td> -->
         <td *ngFor="let year of timeRangeArr">
           {{ item.data[year] }}
         </td>
