--- a/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.html
+++ b/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.html
@@ -6,7 +6,7 @@
   <h4 class="text-center">Forecast Worksheet</h4>
   <div class="my-3">
     <button class="btn btn-success" title="Save Worksheet">Save</button>
-    <button class="btn btn-primary mx-3" title="Fetch saved Worksheets" (clivk)="loadWorksheet()">Fetch</button>
+    <button class="btn btn-primary mx-3" title="Fetch saved Worksheets" (click)="loadWorksheet()">Fetch</button>
     <button class="btn btn-secondary" routerLink="" title="Back">Back</button>
   </div>
   <table>
@@ -27,10 +27,10 @@
         <!-- <td>{{ item.country }}</td>
         <td>{{ item.gender }}</td>
         <td>{{ item.age }}</td> -->
-        <td *ngFor="let name of levelNamesArr">
+        <td *ngFor="let name of levelNamesArr" contenteditable="true">
           {{item[name]}}
         </td>
-        <td *ngFor="let year of timeRangeArr">
+        <td *ngFor="let year of timeRangeArr" contenteditable="true">
           {{ item.data[year] }}
         </td>
       </tr>
