--- a/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.css
+++ b/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.css
@@ -1,19 +1,30 @@
 table {
-    border-collapse: collapse;
-    width: 100%;
-  }
-  
-  th, td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: left;
-  }
-  
-  th {
-    background-color: #f2f2f2;
-  }
-  
-  header{
-    /* background-color: rgb(146, 255, 127); */
-    padding: 5px 10px;
+  border-collapse: collapse;
+  width: 100%;
 }
+
+th,
+td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+header {
+  /* background-color: rgb(146, 255, 127); */
+  padding: 5px 10px;
+}
+
+#fetchFormDivId{
+  border: 1px solid black;
+  padding: 5px;
+}
+
+#inputSheetName{
+  margin-left: 20px;
+}
+
