--- a/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.html
+++ b/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.html
@@ -29,6 +29,7 @@
 
     <Label>Current Sheet: {{worksheetParametersTransferService.sheetName}}</Label>
   </div>
+  <label class="text-danger" *ngIf="firstTimeIntervalNotFilled">First Time interval has to be filled</label>
   <table>
     <!-- Table Header -->
     <thead>
@@ -49,7 +50,7 @@
           <td *ngFor="let name of levelNamesArr" contenteditable="true" (input)="onCellEdit($event, name, item)">
             {{ item[name] }}
           </td>
-          <td *ngFor="let year of timeRangeArr" contenteditable="true" (input)="onCellEdit($event, year, item)">
+          <td *ngFor="let year of timeRangeArr" contenteditable="true" (input)="onDataCellEdit($event, year, item)">
             {{ item.data[year] }}
           </td>
         </tr>
@@ -64,7 +65,7 @@
                   <td *ngFor="let p of [].constructor(data['colOffset'])"></td>
                   <td>{{data['totalColName']}}</td>
                   <td *ngFor="let p of [].constructor(data['remainingLevels'])"></td>
-                  <td *ngFor="let yrTotal of data['totalColValue']">{{yrTotal}}</td>
+                  <td contenteditable="true" *ngFor="let yrTotal of data['totalColValue'],let j=index" (input)="onTotalCellEdit($event, j, item, data)">{{yrTotal}}</td>
                 </tr>
               </ng-container>
             </ng-container>
@@ -85,6 +86,7 @@
           </ng-container>
         </ng-container>
       </ng-container>
+
     </tbody>
   </table>
 </div>
