Add calculation of grand total.

--- a/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.html
+++ b/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.html
@@ -86,7 +86,12 @@
           </ng-container>
         </ng-container>
       </ng-container>
-
+            <ng-container>
+              <tr>
+                <td>Grand Total</td>
+                <td colspan="4">{{levelTotals['GrandTotal']}}</td>
+              </tr>
+            </ng-container>
     </tbody>
   </table>
 </div>
