--- a/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.css
+++ b/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.css
@@ -28,3 +28,8 @@ header {
   margin-left: 20px;
 }
 
+.totalRowClass{
+  background-color: rgb(137, 221, 148);
+  font-weight: bolder;
+  color: rgb(0, 0, 0);
+}
