connection with db

--- a/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.html
+++ b/forecastingApplication/src/app/display-page/forecast-display/forecast-display.component.html
@@ -5,7 +5,7 @@
 <div class=" container mt-3">
   <h4 class="text-center">Forecast Worksheet</h4>
   <div class="my-3">
-    <button class="btn btn-success" title="Save Worksheet">Save</button>
+    <button class="btn btn-success" title="Save Worksheet" (click)="saveSheet()">Save</button>
     <button class="btn btn-primary mx-3" title="Fetch saved Worksheets" (click)="fetchClicked()">Fetch</button>
     <button class="btn btn-secondary" routerLink="" title="Back">Back</button>
     <br>
